@@ -5,6 +5,11 @@ CHANGELOG
    Those changes are not all listed here.
 ** For a while this is going to ONLY INCLUDE BREAKING CHANGES.
 
+2024/05/21:
+- TestEngine: *BREAKING* obsoleted ctx->YieldUntil(int frame_count) which
+  seems mostly unused, misleading, and can be replaced by 2 lines of code.
+  Kept redirecting inline helper (will obsolete).
+
 2024/05/17:
 - TestEngine: Fixes calling ImGuiTestEngine_QueueTests() with NULL filter.
 
